# skforecast

./: .codecov.yml  .coverage  .gitignore  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Forecaster.py  ForecasterAutoreg.py  LICENSE  README.md  TODO.md  _tox.ini  changelog.md  develop  docs-requirements.txt  docs-requirements_old.txt  extract_dependences.py  forecaster.joblib  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_docs.txt  requirements_lstm.txt  requirements_mkdocs.txt  requirements_optional.txt  requirements_test.txt  ruff.toml  setup.py  sitemap.xml  skforecast.py  test_bayesian_search_optuna_output_file.txt  test_evaluate_grid_hyperparameters_output_file.txt  test_requirements.txt  tox.ini  utils.py  versions.json
.github/: FUNDING.yml
.github/workflows/: codecov.yml  unit-tests.yml
.ipynb_checkpoints/: changelog-checkpoint.md
0.1/: 404.html  index.html  sitemap.xml
0.1/api/: ForecasterAutoreg.html  (+4 more)
0.10.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.10.1/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.11.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.12.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.12.1/: 404.html  README.md  index.html  sitemap.xml
0.13.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.14.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.14.x/: 404.html  index.html  objects.inv  sitemap.xml
0.3/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.1/: 404.html  index.html  sitemap.xml
0.4.2/: 404.html  index.html  sitemap.xml
0.4.3/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.5.0/: 404.html  README.md  index.html  sitemap.xml
0.5.1/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.7.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.8.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.8.1/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.9.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.9.1/: 404.html  README.md  index.html  sitemap.xml
api/: ForecasterAutoreg.html  ForecasterAutoregCustom.html  ForecasterAutoregMultiOutput.html  model_selection.html  model_selection_statsmodels.html
asv_benchmarks/: asv.conf.json
data/: energy_production_shutdown.csv  guangyuan_air_pollution.csv  h2o.csv  h2o_exog.csv  simulated_items_sales.csv  vic_elec_hourly.csv  vic_elec_weekly.csv
dev/: 00_TimeSeriesDifferentiator.ipynb  00_bayesian_multiseries.ipynb  00_profiling_skforecast.ipynb  00_template.ipynb  01_backtesting_execution_time.ipynb  01_gif_backtestings_creator.ipynb  01_search_link_in_notebooks.ipynb  02_check_MultiCustom_0_14.ipynb  Binner.ipynb  Dev_get_feature_importance.ipynb  Error_diferentiation.ipynb  Example_Multiseries.ipynb  Example_multi_series_with_different_length_diferent_exog.ipynb  ForecasterAutoregMultiseriesCustom.ipynb  ForecasterLastEquivalentDate.ipynb  ForecasterSarimax.ipynb  ForecasterSarimax_unit_test.ipynb  ForecaterAutoregCustomDiff.ipynb  ForecaterAutoregCustomDiff_order_2.ipynb  ForecaterAutoregDiff.ipynb  ForecaterAutoregDiff_order_2.ipynb  ForecaterAutoreg_differentiation.ipynb  ForecaterAutoreg_differentiation_order_2.ipynb  Gines_ForecasterDirect_proposal.ipynb  Multiseries_v2.ipynb  No_lags_multivariate.ipynb  TimeSeriesFold.ipynb  autoarima.ipynb  backtesting_gap.ipynb  bayesian_multiseries.ipynb  bayesian_search_multiseries.ipynb  calendar_features.ipynb  categorical_features.ipynb  check_input_multiseries.ipynb  check_optional_dependences.ipynb  col_names-in-direct.ipynb  conditional-forecasting-prediction-intervals.ipynb  conditional-forecasting-prediction-intervals_energy.ipynb  conditional-forecasting-prediction-intervals_new.ipynb  custom_warning.ipynb  (+137 more)
docs/: README.md  index.md
examples/: examples.html  forecasting-demanda-energia-electrica-python.ipynb  forecasting-electricity-power-demand-python.ipynb  forecasting-prediction-intervals-machine-learning.ipynb  forecasting-series-temporales-python-scikitlearn.ipynb  forecasting-visitas-web-machine-learning.ipynb  forecasting-web-traffic-machine-learning.ipynb  intervalos-prediccion-modelos-forecasting-machine-learning.ipynb  multi-series-forecasting-español.ipynb  multi-series-forecasting.ipynb  time-series-forecasting-python-scikitlearn.ipynb
experimental/: ForecasterAutoregMultiOutput.py  skforecast_ForecasterAutoregMultiOutput-experimental.ipynb
guides/: autoregresive-forecaster-exogenous.html  autoregresive-forecaster.html  autoregresive_forecaster.html  autoregresive_forecaster_exogenous.html  cross-validation-backtest.html  cross_validation_backtest.html  custom-predictors.html  custom_predictors.html  direct-multi-step-forecasting.html  direct_multi_step_forecasting.html  forecasting-methods.html  getting-started.html  introduction-forecasting.html  prediction-intervals.html  prediction_intervals.html  releases.html  tuning-forecaster.html  tuning.html
latest/: 404.html  index.html
notebooks/: comparacion-metodos-forecasting-skforecast.ipynb  introduction_skforecast.ipynb  skforecast_functional_testing.ipynb
overrides/: main.html
releases/: releases.html
search/: search_index.json
site/: sitemap.xml
skforecast/: .coverage  ForecasterAutoreg.py  ForecasterAutoregCustom.py  ForecasterAutoregMultiOutput.py  ForecasterAutoregMultistep.py  ForecasterAutoreg_pdseries.py  ForecasterBase.py  ForecasterCustom.py  __init__.py  model_selection.py  model_selection_statsmodels.py  utils.py
skforecast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_ForecasterAutoreg.py  test_ForecasterAutoregCustom.py  test_ForecasterAutoregMultiOutput.py  test_ForecasterCustom.py  test_cv_forecaster.py  test_forecasterautoreg.py  test_model_selection.py  test_skforecast.py  test_skforecast_version.py  test_time_series_spliter.py
(+2584 files in other folders)
