[project]
name = "skforecast"
version = "0.14.0"
description = "Skforecast is a Python library for time series forecasting using machine learning models. It works with any regressor compatible with the scikit-learn API, including popular options like LightGBM, XGBoost, CatBoost, Keras, and many others."
readme = "README.md"
authors = [
    { name = "Joaquin Amat Rodrigo", email = "j.amatrodrigo@gmail.com" },
    { name = "Javier Escobar Ortiz", email = "javier.escobar.ortiz@gmail.com" },
]

maintainers = [
    { name = "Joaquin Amat Rodrigo", email = "j.amatrodrigo@gmail.com" },
    { name = "Javier Escobar Ortiz", email = "javier.escobar.ortiz@gmail.com" },
]

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    "data-science",
    "machine-learning",
    "data-mining",
    "time-series",
    "scikit-learn",
    "forecasting",
    "time-series-analysis",
    "time-series-regression",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "tqdm>=4.57",
    "scikit-learn>=1.2",
    "optuna>=2.10",
    "joblib>=1.1",
    "numba>=0.59"
]
requires-python = ">=3.9"

[project.optional-dependencies]
sarimax = [
    "statsmodels>=0.12, <0.15"
]

plotting = [
    "matplotlib>=3.3, <3.10",
    "seaborn>=0.11, <0.14",
    "statsmodels>=0.12, <0.15"
]

deeplearning = [
    "matplotlib>=3.3, <3.10", 
    "keras>=2.6, <4.0"
]

all = [
    "matplotlib>=3.3, <3.10",
    "seaborn>=0.11, <0.14",
    "statsmodels>=0.12, <0.15",
    "keras>=2.6, <4.0"
]

full = [
    "matplotlib>=3.3, <3.10",
    "seaborn>=0.11, <0.14",
    "statsmodels>=0.12, <0.15",
    "keras>=2.6, <4.0",
]

docs = [
    "mike==2.1.3",
    "mkdocs==1.6.1",
    "mkdocs-jupyter==0.25.0",
    "mkdocs-material==9.5.39",
    "mkdocstrings==0.26.1",
    "mkdocstrings-python==1.11.1",
    "notebook==6.4.12",
    "jupyter-contrib-nbextensions==0.7.0",
    # Si está el enlace de abajo, al hacer pip install .[docs] falla
    #"https://github.com/ipython-contrib/jupyter_contrib_nbextensions/tarball/master"
]

test = [
    "pytest>=7.1, <8.3",
    "pytest-cov>=4.0, <5.1",
    "pytest-xdist>=3.3, <3.7",
    "lightgbm>=4.0, <4.5",
    "tensorflow>=2.13, <2.17",
    "torch>=2.2, <2.3",
    "tomli>=2.0, <2.1",
    "pandas[parquet]>=1.5"
]


[project.urls]
Homepage = "https://www.skforecast.org"
Repository = "https://github.com/skforecast/skforecast"
Documentation = "https://www.skforecast.org"
"Release Notes" = "https://skforecast.org/latest/releases/releases"


[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>=61", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skforecast", "skforecast*"]
exclude = ["skforecast/**/tests/*"]
